feat(server): gateway-only services
